test/fixtures/syntaxerrors/f.lys.ast.desugar
|-Document(0,34)
  |-(AstCons)
    |-FunctionDirective(0,34)
      |-(AstCons)
        |-Decorators(0,0)
          <Rule0>
        |-(AstCons)
          |-PrivateModifier(0,8)
            <Rule0>
          |-FunDeclaration(8,34)
            |-(AstCons)
              |-NameIdentifier(12,16)
                |-Identifier=test
              |-(AstCons)
                |-TypeParameters(16,16)
                  <Rule0>
                |-(AstCons)
                  |-FunctionParamsList(16,30)
                    |-(List)(17,29)
                      |-(AstCons)
                        |-Parameter(17,20)
                          |-(AstCons)
                            |-NameIdentifier(17,18)
                              |-Identifier=a
                            |-<SyntaxError>=A type or effect was expected
                        |-Parameter(21,29)
                          |-(AstCons)
                            |-NameIdentifier(21,22)
                              |-Identifier=b
                            |-Reference(24,29)
                              |-QName(24,29)
                                |-NameIdentifier(24,29)
                                  |-Identifier=AType
                  |-(AstCons)
                    |-ReturnType(31,31)
                      <Rule0>
                    |-FunctionBody(31,34)
                      |-NumberLiteral=2
    |-EndOfFile=